Release 2.2.0 (#123)
* Update dependency de.eldoria:eldo-util to v1.13.9 (#104)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update plugin de.chojo.publishdata to v1.0.5 (#113)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update JamesIves/github-pages-deploy-action action to v4.3.4 (#115)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Implement preset and brush storage (#105)

* Implement preset storage

* Integrate preset storage into SBR commands

* Add storage for brushes and presets

* Add snapshot of brush builder for serialization

* Add brush container for serialization

* Change brush container type to brush

* Refine container interfaces

* Reimplement migration into container holder and container

* Add migrate mechanic

* Implement migrate command

* Bump version

* implemented yaml-brush-storage...

* Integrate commands for loading and saving of a brush

* Fix build error

* Add equals and hashcode implementation for mutator and selectors

* Fix NPE when no list is present in container

* fix wrong key on brush container serialization

* Fix config save failure due to instance changes not reflected by storage

* Add serializer test

* Add serialization annotation for backwards compatibility

* Cleanup

* Apply code formatting

* Annotate mutator with serialization annotation

* Escape null modifier values

* Fix possible null values on mutator UI build

* Implement absolute paths #109 (#110)

* Implement absolute paths #109

* Reformatting

* implement proper shutdown and improve metrics

* Refactor registries (#116)

* Refactor registries

* Remove redundant javadocs

* Add license

* Fix startup error due to wrong init order

* fix wrong initialization order

* Small adjustments

Co-authored-by: LuftigerLuca <#Hicks170105>

* Update dependency com.fasta